tiny alignment fixes for videochat

--- a/mods/stun/web/css/stun-chatbox.css
+++ b/mods/stun/web/css/stun-chatbox.css
@@ -10,6 +10,7 @@
   height: 3rem;
   font-size: 3rem;
 }
+
 .stunx-chatbox {
   top: 0 !important;
   left: 0 !important;
@@ -85,6 +86,7 @@
   transition: all 0.5s ease;
   position: relative;
 }
+
 .expanded-video {
   width: 75%;
   height: 100%;
@@ -118,7 +120,6 @@
 
 .side-videos .video-box-container-large {
   height: 30%;
-
   border: 2px solid var(--saito-secondary);
 }
 
@@ -167,7 +168,6 @@
   0% {
     transform: rotate(0deg);
   }
-
   100% {
     transform: rotate(360deg);
   }
@@ -177,21 +177,19 @@
   0% {
     transform: scale(0.97);
   }
-
   50% {
     transform: scale(1);
   }
-
   75% {
     transform: scale(0.97);
   }
-
   100% {
     transform: scale(0.97);
   }
 }
 
 /*  video box */
+
 .video-box-container-large {
   background-color: black;
   display: flex;
@@ -214,7 +212,7 @@
   border: none;
 }
 
-.video-box-container-large > #connection-message {
+.video-box-container-large>#connection-message {
   color: var(--saito-white);
   width: 50%;
   line-height: 1.5;
@@ -254,12 +252,13 @@
   cursor: pointer;
   border: 1px solid transparent;
 }
-.video-box-container-large > #connection-message > p {
+
+.video-box-container-large>#connection-message>p {
   color: var(--saito-white);
   font-size: 2.8rem;
 }
 
- .video-call-info {
+.video-call-info {
   color: var(--saito-white);
   line-height: 1.5;
   position: absolute;
@@ -272,16 +271,16 @@
   z-index: 2;
 }
 
- .video-call-info > p {
+.video-call-info>p {
   color: #ffffff69;
   font-size: 2rem;
-  white-space: nowrap; 
-  overflow: hidden; 
-  text-overflow: ellipsis; 
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin-right: 1rem;
 }
 
- .video-call-info i {
+.video-call-info i {
   font-size: 2rem;
   margin-right: 1rem;
 }
@@ -325,6 +324,7 @@
 }
 
 /*  Add users */
+
 .add-users-container {
   min-width: 0;
   width: 50rem;
@@ -350,15 +350,16 @@
 .add-users-code-container i {
   cursor: pointer;
 }
+
 .add-users-footer-text {
   margin-top: 1rem;
   font-size: 1.4rem;
 }
+
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
   }
-
   100% {
     transform: rotate(360deg);
   }
@@ -368,15 +369,12 @@
   0% {
     transform: scale(0.97);
   }
-
   50% {
     transform: scale(1);
   }
-
   75% {
     transform: scale(0.97);
   }
-
   100% {
     transform: scale(0.97);
   }
@@ -401,10 +399,11 @@
   color: var(--saito-white);
   margin-right: 1rem;
 }
+
 .timer .counter {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
 }
+
 .timer .counter span {
   color: orangered;
   font-size: 2rem;
@@ -413,6 +412,7 @@
 .users-on-call {
   display: flex;
   align-items: center;
+  gap: 1rem;
 }
 
 .users-on-call .image-list {
@@ -423,7 +423,6 @@
 .image-list img {
   width: 4rem;
   height: 4rem;
-
 }
 
 .control-list {
@@ -473,46 +472,37 @@
     height: 70%;
     background: black;
   }
-
   .stunx-chatbox .footer {
     height: 30%;
   }
-
   .control-panel {
     padding-bottom: 5rem;
     flex-direction: column-reverse;
     align-items: flex-start;
     justify-content: start;
   }
-
   .control-panel .control-list {
     margin-bottom: 1rem;
   }
 }
 
 @media screen and (max-height: 850px) {
-  .video-box-container-large:nth-child(2) {
-  }
-
+  .video-box-container-large:nth-child(2) {}
   .control-panel {
     padding-bottom: 10rem;
   }
-
   .control-panel span {
     width: 4rem;
     height: 4rem;
   }
-
   .control-panel .timer {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
   }
-
   .control-panel .timer .counter {
     margin-left: 1rem;
   }
-
   .control-panel .timer .counter span {
     color: orangered;
     font-size: 2rem;
@@ -549,7 +539,6 @@
   z-index: 40;
 }
 
-
 .chat-settings-preview-section {
   display: flex;
   flex-direction: column;
@@ -570,13 +559,16 @@
   justify-content: center;
   color: var(--saito-white);
 }
+
 .chat-settings-join-section h2 {
   margin-bottom: 1.5rem;
 }
+
 .chat-settings-join-section p {
   margin-bottom: 1.5rem;
   color: var(--saito-white);
 }
+
 .chat-settings-test-mic {
   margin-top: 1rem;
 }
@@ -688,7 +680,6 @@
 }
 
 @media screen and (max-width: 767px) {
-
   .video-call-info i {
     font-size: 1rem;
     margin-right: .5rem;
@@ -696,9 +687,8 @@
   .chat-settings {
     flex-direction: column;
     padding: 1rem;
-    margin-top:0;
+    margin-top: 0;
   }
-
   .chat-settings video {
     height: 18rem;
   }
@@ -706,52 +696,43 @@
     margin-right: 0;
     margin-bottom: 2rem;
   }
-
   .chat-settings-preview {
     width: 100%;
   }
-  .video-box-container-large > #connection-message {
+  .video-box-container-large>#connection-message {
     width: 100%;
   }
-  .video-box-container-large > #connection-message p {
+  .video-box-container-large>#connection-message p {
     font-size: 1rem;
   }
-
   .chat-settings select {
     width: 100%;
   }
- .video-call-info > p {
+  .video-call-info>p {
     font-size: 1.2rem;
     /* max-width: 50px; */
     margin-right: .5rem;
   }
-
   .expanded-video {
     width: 100%;
-
     margin-right: 0;
   }
   .side-videos {
     position: absolute;
     right: 0;
   }
-
-
-  .side-videos .video-call-info > p{
-        max-width: 50px;
+  .side-videos .video-call-info>p {
+    max-width: 50px;
   }
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .chat-settings {
     padding: 1rem;
   }
-
   .chat-settings-preview {
     width: 40rem;
   }
-
   .chat-settings select {
     width: 40rem;
   }
